// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageMetadata > en: full metadata snapshot 1`] = `
{
  "alternates": {
    "canonical": "https://harpyhare.ai/en",
    "languages": {
      "en": "https://harpyhare.ai/en",
      "ru": "https://harpyhare.ai/",
      "x-default": "https://harpyhare.ai/",
    },
  },
  "applicationName": "harpyhare",
  "category": "technology",
  "description": "A macOS and Windows app: hold a key and harpyhare captures system audio, transcribes it with Whisper and streams Claude's answer in a floating window. The window stays out of screen shares.",
  "keywords": [
    "system audio capture",
    "speech to text",
    "meeting assistant",
    "interview assistant",
    "Whisper",
    "Claude",
    "invisible during screen sharing",
    "teleprompter",
    "macOS",
    "Windows",
  ],
  "metadataBase": "https://harpyhare.ai/",
  "openGraph": {
    "description": "System audio capture, instant transcription and Claude's answer in a window that floats above everything else. Builds for macOS and Windows.",
    "images": [
      {
        "alt": "harpyhare — hears the question, shows the answer",
        "height": 630,
        "url": "/og-en.jpg",
        "width": 1200,
      },
    ],
    "locale": "en_US",
    "siteName": "harpyhare",
    "title": "harpyhare — hears the question, shows the answer",
    "type": "website",
    "url": "https://harpyhare.ai/en",
  },
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
      "max-image-preview": "large",
      "max-snippet": -1,
      "max-video-preview": -1,
    },
    "index": true,
  },
  "title": "harpyhare — hears the question, shows the answer",
  "twitter": {
    "card": "summary_large_image",
    "description": "System audio capture, instant transcription and Claude's answer in a window that floats above everything else. Builds for macOS and Windows.",
    "images": [
      {
        "alt": "harpyhare — hears the question, shows the answer",
        "height": 630,
        "url": "/og-en.jpg",
        "width": 1200,
      },
    ],
    "title": "harpyhare — hears the question, shows the answer",
  },
}
`;

exports[`pageMetadata > ru: full metadata snapshot 1`] = `
{
  "alternates": {
    "canonical": "https://harpyhare.ai/",
    "languages": {
      "en": "https://harpyhare.ai/en",
      "ru": "https://harpyhare.ai/",
      "x-default": "https://harpyhare.ai/",
    },
  },
  "applicationName": "harpyhare",
  "category": "technology",
  "description": "Приложение для macOS и Windows: зажмите клавишу — harpyhare запишет системный звук, распознает речь через Whisper и покажет ответ Claude в плавающем окне поверх остальных. Окно не попадает в захват экрана.",
  "keywords": [
    "захват системного звука",
    "распознавание речи",
    "ассистент для созвонов",
    "подсказки на собеседовании",
    "Whisper",
    "Claude",
    "невидимое окно при демонстрации экрана",
    "суфлёр",
    "macOS",
    "Windows",
  ],
  "metadataBase": "https://harpyhare.ai/",
  "openGraph": {
    "description": "Захват системного звука, расшифровка на лету и ответ Claude в плавающем окне поверх всех приложений. Версии для macOS и Windows.",
    "images": [
      {
        "alt": "harpyhare — слышит вопрос, показывает ответ",
        "height": 630,
        "url": "/og.jpg",
        "width": 1200,
      },
    ],
    "locale": "ru_RU",
    "siteName": "harpyhare",
    "title": "harpyhare — слышит вопрос, показывает ответ",
    "type": "website",
    "url": "https://harpyhare.ai/",
  },
  "robots": {
    "follow": true,
    "googleBot": {
      "follow": true,
      "index": true,
      "max-image-preview": "large",
      "max-snippet": -1,
      "max-video-preview": -1,
    },
    "index": true,
  },
  "title": "harpyhare — слышит вопрос, показывает ответ",
  "twitter": {
    "card": "summary_large_image",
    "description": "Захват системного звука, расшифровка на лету и ответ Claude в плавающем окне поверх всех приложений. Версии для macOS и Windows.",
    "images": [
      {
        "alt": "harpyhare — слышит вопрос, показывает ответ",
        "height": 630,
        "url": "/og.jpg",
        "width": 1200,
      },
    ],
    "title": "harpyhare — слышит вопрос, показывает ответ",
  },
}
`;
